--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 body {
   margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 nav {
@@ -25,18 +27,41 @@ nav li {
   justify-content: space-between;
   width: 100%;
   text-align: center;
+
 }
 
 nav li a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: 'Oswald', sans-serif;
-/*   font-weight: bold; */
   color: #fff;
+}
+
+a:hover, a:active {
+  font-family: 'Oswald', san-serif;
+  font-weight: bold;
+  color: red;
 }
 
 img {
   display: block;
   margin: 0 auto;
   width: 100%;
+}
+
+p {
+  padding: 0 490px;
+  text-align: center;
+}
+
+footer {
+  background-color: #000;
+  margin: 0 auto;
+  padding: 200 400;
+
+
+}
+
+footer li {
+   font-color: #fff;
 }
