--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body {
   margin: 0 auto;
   font-family: 'Roboto', sans-serif;
-
 }
 
 nav {
@@ -15,6 +14,7 @@ nav {
   background: #000;
   display: flex;
   align-items: center;
+  font-size: 1.5rem;
 }
 
 nav ul {
@@ -35,6 +35,7 @@ nav li a {
   text-transform: uppercase;
   font-family: 'Oswald', sans-serif;
   color: #fff;
+
 }
 
 a:hover, a:active {
@@ -50,18 +51,26 @@ img {
 }
 
 p {
-  padding: 0 490px;
+  margin: 200;
+  padding: 100px 490px;
+/*   padding-bottom: 0; */
   text-align: center;
 }
 
 footer {
   background-color: #000;
   margin: 0 auto;
-  padding: 200 400;
-
+  padding: 150px 400px;
 
 }
 
+footer ul {
+  margin: 0 auto;
+  color: #fff;
+}
+
 footer li {
-   font-color: #fff;
+  font-color: #fff;
+  list-style: none;
+  font-size: 1.3rem;
 }
