--- a/style.css
+++ b/style.css
@@ -50,12 +50,28 @@ img {
   width: 100%;
 }
 
+@media screen and (min-width: 800px;) {
+  img {
+    width: 600px;
+  }
+}
+
 p {
-  margin: 200;
-  padding: 100px 400px;
+  margin: 200px;
+  padding: 100px 150px;
 /*   padding-bottom: 0; */
   text-align: center;
 }
+
+@media screen and (min-width: 600px) {
+  p {
+    margin: 0;
+    padding: 90px;
+    width: auto;
+    text-align: center;
+    font-size: 1rem;
+    color: #40586d;
+  }
 
 footer {
   background-color: #000;
@@ -78,3 +94,16 @@ footer li {
   list-style: none;
   font-size: 1.3rem;
 }
+
+.articles {
+  overflow: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.article {
+  width: calc(33.3333% - 1rem);
+ /* float: left;*/
+  overflow: hidden;
+  padding: 1rem;
+  /*margin: 0 .25rem;*/
